Bug 364125, middle-click on scroll bar keeps scrolling until the left mouse button is pressed, p=badsector@slashstone.com, r=me, sr=roc